# rust-axum-note-crud

./: Cargo.toml  notes.json  readme.md  users.json
src/: main.rs
